--- a/client/package.json
+++ b/client/package.json
@@ -16,10 +16,12 @@
     "framer-motion": "^12.9.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "redux-persist": "^6.0.0",
-    "sass": "^1.85.1"
+    "sass": "^1.85.1",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
