--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon index.js"
+    "build": "npm install",
+    "dev": "nodemon index.js",
+    "start": "nodemon index.js"
+
   },
   "keywords": [],
   "author": "",
