--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,11 @@
     "axios": "^1.9.0",
     "backend": "file:..",
     "framer-motion": "^12.9.7",
+    "lucide-react": "^0.511.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
+    "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "redux-persist": "^6.0.0",
