--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,10 @@ CLOUD_NAME=dpryfu2wr
 API_KEY=184748686744466
 API_SECRET=wFNRKhT-pYcAdrDGiJB_G5vn1Pc
 FRONTEND_URL=http://localhost:5173
+
+
+#  real credentials
+
+# CLOUD_NAME=drbdpfwcv
+# API_KEY=968164685675399
+# API_SECRET=5ZRRiY-AgRLMQlcu7TnWJAuhS28
