--- a/server/.env
+++ b/server/.env
@@ -6,3 +6,7 @@ CLOUD_NAME=drbdpfwcv
 API_KEY=968164685675399
 API_SECRET=5ZRRiY-AgRLMQlcu7TnWJAuhS28
 FRONTEND_URL=http://localhost:5173
+
+
+ADMIN_EMAIL="yashgupta.2209@gmail.com"
+ADMIN_PASS="M@_Eu5^.A_cj_m#"
