--- a/server/package.json
+++ b/server/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
+  // "scripts": {
+  //   "build": "npm install",
+  //   "dev": "nodemon index.js",
+  //   "start": "nodemon index.js"
+  // },
   "scripts": {
-    "build": "npm install",
-    "dev": "nodemon index.js",
-    "start": "nodemon index.js"
-
+    "dev": "nodemon api/index.js",
+    "start": "node api/index.js"
   },
   "keywords": [],
   "author": "",
